fix dark mode code color for Golang

--- a/static/style/pygments_style.css
+++ b/static/style/pygments_style.css
@@ -57,7 +57,7 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
 .ld { color: #657b83 } /* Literal.Date */
 .m { color: #2aa198 } /* Literal.Number */
 .s { color: #2aa198 } /* Literal.String */
-.na { color: #657b83 } /* Name.Attribute */
+.na { color: var(--name-c) } /* Name.Attribute */
 .nb { color: #268bd2 } /* Name.Builtin */
 .nc { color: #268bd2 } /* Name.Class */
 .no { color: #268bd2 } /* Name.Constant */
@@ -67,8 +67,8 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
 .nf { color: #268bd2 } /* Name.Function */
 .nl { color: #268bd2 } /* Name.Label */
 .nn { color: #268bd2 } /* Name.Namespace */
-.nx { color: #657b83 } /* Name.Other */
-.py { color: #657b83 } /* Name.Property */
+.nx { color: var(--name-c) } /* Name.Other */
+.py { color: var(--name-c) } /* Name.Property */
 .nt { color: #268bd2 } /* Name.Tag */
 .nv { color: #268bd2 } /* Name.Variable */
 .ow { color: #859900 } /* Operator.Word */
